[tool.poetry]
name = "juntando-planilha"
version = "0.1.0"
description = ""
authors = ["Alexandre Rosa <prcriandoseubot@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.3.2"
openpyxl = "^3.1.5"
xlrd = "^2.0.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
